fixed overflow

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -2,6 +2,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #000000;
+  overflow: hidden;
 }
 
 .wrapper {
